<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />

        <variable
            name="satViewModel"
            type="com.example.a20211013_danhphan_nycschools.ui.sat.SatViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{satViewModel.isLoading ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/title_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/school_info" />

            <TextView
                android:id="@+id/tv_school_name"
                style="@style/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:text="@{satViewModel.schoolInfo.getSchoolName()}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/school_phone" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getPhoneNumber()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/school_fax" />

                <TextView
                    android:id="@+id/tv_fax"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getFaxNumber()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/school_email" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getEmail()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/school_website" />

                <TextView
                    android:id="@+id/tv_website"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getWebsite()}" />
            </LinearLayout>

            <TextView
                style="@style/title_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/sat_avg_score" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/sat_avg_num_test_taker" />

                <TextView
                    android:id="@+id/tv_num_test_taker"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getSatInfo().getNumTestTakers()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/sat_avg_math" />

                <TextView
                    android:id="@+id/tv_avg_math"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getSatInfo().getMathAvgScore()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/sat_avg_reading" />

                <TextView
                    android:id="@+id/tv_avg_reading"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getSatInfo().getReadingAvgScore()}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@string/sat_avg_writing" />

                <TextView
                    android:id="@+id/tv_avg_writing"
                    style="@style/info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:text="@{satViewModel.schoolInfo.getSatInfo().getWritingAvgScore()}" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>